<resources>
    <string name="app_name">Go2U</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (required)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing username
        completions."
    </string>
    <string name="title_activity_welcome">Welcome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="online_sing_up">Sign Up for free!</string>

    <!--Welcome content fields-->
    <string name="welcome_username">Username</string>
    <string name="welcome_name">Name</string>
    <string name="welcome_lastname">Last Name</string>
    <string name="welcome_address">Address</string>
    <string name="welcome_email">E-mail</string>
    <string name="welcome_cellPhone">Phone</string>
    <string name="welcome_button_save">Update</string>
    <string name="welcome_title">Welcome to Go2U</string>
    <string name="welcome_phrase">The best way to find the University and degree of your dreams!</string>

    <!--University content fields-->
    <string name="university_name">Name</string>
    <string name="university_address">Address</string>
    <string name="university_email">E-mail</string>
    <string name="university_phone">Phone</string>
    <string name="university_url">URL</string>
    <string name="university_desc">Description</string>
    <string name="university_button_test">Take the Test</string>
    <string name="test_button_send">Save and send Test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="under_construction">We are working on this!</string>

</resources>
